feat(openfga): add creating, updating, and deleting OpenFGA event handlers  (#934)
* Add authorization handler for openfga

* fix(authz): Remove authorization handler, implement interface

* feat(authorization): add basic tests to authz methods

* feat(openfga): implemented openfga store & model creation from model file

* feat(openfga): updated authz interface and implementation and wrote unit test suite

* feat(openfga): Add create user resource relationships, and testing

* fix(openfga): refactored variables, Added duplicate check for tuples

* feat(authz): various updates to authz setup and added handler context struct for app handler arguments

* feat(authz): added doc on openfga implementation

* feat(openfga): merge changes from parent, Add basic update functionality

* feat(openfga): removed old placeholder and updated openfga env variables

* chore: added license header

* fix(openfga): add basic delete and create tuple functionality

* fix(openfga): app tests should pass when no authz is enabled

* feat(openfga): add delete functionality to openfga tuples

* fix(openfga): finish create function for openfga tuples

* feat(openfga): create update openfga tuple event handlers, update documentation

* feat(openfga): add DeleteUser handler, add test

* fix(openfga): fix failing user test

* chore(openfga): update go.sum

* fix(openfga): update failing tests

* fix(openfga): fix component handler testing

* fix(openfga): update component handler test

* fix: updated no authz check permission to return true

* fix: updated auth config in app test suite and removed unnecessary lines

* fix: added openfga service and config to test suite gh action

* fix: fixed openfga model file paths in app tests

* fix: removed unused default prio and reponame variables

* fix: fixed error with removed issue repo name and default prio fields in authz unit tests

* fix: removed unfitting conditionals from authz unit tests

* fix: updated link to auth model in docs

* fix: added b

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,6 +19,32 @@ jobs:
         image: valkey/valkey:7.2
         ports:
           - "6379:6379"
+      postgres:
+        # Docker Hub image
+        image: postgres
+        # Provide the password for postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - "5432:5432"
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      openfga:
+        image: openfga/openfga:latest
+        env:
+          OPENFGA_DATASTORE_ENGINE: postgres
+          OPENFGA_DATASTORE_URI: postgres://postgres:password@postgres:5432/postgres?sslmode=disable
+          OPENFGA_LOG_FORMAT: json
+          OPENFGA_AUTHN_METHOD: preshared
+          OPENFGA_AUTHN_PRESHARED_KEYS: test_token
+        ports:
+          - "8080:8080"
+          - "8081:8081"
     steps:
       - uses: actions/checkout@v6
       - name: Set up Go
@@ -42,4 +68,9 @@ jobs:
           DB_ADDRESS: localhost
           DB_PORT: 3306
           DB_SCHEMA: internal/database/mariadb/init/schema.sql
+          LOCAL_TEST_DB: true
+          AUTHZ_FGA_API_URL: http://localhost:8080
+          AUTHZ_FGA_API_TOKEN: test_token
+          AUTHZ_FGA_STORE_NAME: heureka_store
+          AUTHZ_MODEL_FILE_PATH: ./internal/openfga/model/model.fga
         run: ginkgo --trace -r -randomize-all -randomize-suites
