--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,4 @@
 {
     "go.testEnvFile": "${workspaceFolder}/.testenv-devcontainer",
-    "ginkgotools.ginkgoPath": "go run github.com/onsi/ginkgo/v2/ginkgo",
-    "go.delveConfig": {
-    "showGlobalVariables": true,
-    },
+    "ginkgotools.ginkgoPath": "go run github.com/onsi/ginkgo/v2/ginkgo"
 }
